fix: ensure that the search-bar doesn't clips into the overflow scrollbar in pc.

--- a/src/app/user-header/user-header.component.scss
+++ b/src/app/user-header/user-header.component.scss
@@ -1,6 +1,11 @@
 .contcont {
   display: flex;
   flex-direction: column;
+
+  ion-searchbar {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
 }
 
 .container {
